# src/modules/accounts/dtos/ICreateUserDTO.ts
@@ -1,0 +1,9 @@
+interface ICreateUserDTO {
+    name: string;
+    userName: string;
+    password: string;
+    email: string;
+    driver_license: string;
+}
+
+export { ICreateUserDTO }
