# src/modules/cars/entities/specification.ts
@@ -1,10 +1,18 @@
 import { v4 as uuidv4 } from "uuid";
+import { PrimaryColumn, Column, CreateDateColumn, Entity } from "typeorm";
 
-
-class Specification{
+@Entity("specifications")
+class Specification {
+    @PrimaryColumn()
     id?: string;
+
+    @Column()
     name!: string;
+
+    @Column()
     description!: string;
+
+    @CreateDateColumn()
     created_at!: Date;
 
     constructor() {
@@ -14,4 +22,4 @@ class Specification{
     }
 }
 
-export { Specification }
+export { Specification };
